--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "tp1-mongosharding",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "app.js",
 	"scripts": {
-		"dev": "node ./index.js",
+		"dev": "node ./app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
+		"ejs": "^3.1.10",
 		"express": "^5.1.0",
 		"mongoose": "^8.19.1"
 	}
