--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"dev": "node ./app.js",
+		"dev": "npm run build && node dist/app.js",
+		"dev:watch": "tsc --watch",
+		"build": "tsc",
+		"start": "node dist/app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -15,5 +18,11 @@
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
 		"mongoose": "^8.19.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.10.0",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.3.0"
 	}
 }
