--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
+		"connect-mongo": "^5.1.0",
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
+		"express-session": "^1.18.2",
 		"mongoose": "^8.19.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
+		"@types/express-session": "^1.18.2",
 		"@types/node": "^20.10.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.3.0"
